# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.358 2005/10/17 17:11:33 rocket Exp $

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  MIPS bootloader patch

  15 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/mips-arcload_conf.sh:
  Fix MIPS Serial Detection

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
  +targets/support/mips-arcload_conf.sh:
  Application of Kumbas patches for MIPS support

  13 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Check for the correct arch specific cd building tool

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Print a warning if livecd/iso is not defined

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Reverted default CHOST for x86 back to i386-pc-linux-gnu.

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/post-kmerge.sh:
  Check for existence of files in /lib/modules before running depscan.sh. This
  replaces the mips-specific check and makes it portable.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  update autoresume logic when dealing with rsync unpack operations

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/post-kmerge.sh:
  Bypass module load on mips

  10 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  remove --no-deps so dependancies get installed for genkernel

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix missing : statement in unpack

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix livecd-stage2 unpack when seedcache is turned off

  10 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh: